<resources>
    <string name="app_name">聊天</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password1">请再次输入密码</string>
    <string name="prompt_username">请输入昵称</string>
    <string name="prompt_mobile">请输入手机号码</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_page">首页</string>
    <string name="title_activity_register">注册</string>
</resources>
